Add link index page with css file, container class to section, added meta keyword and content to head section

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="basketball, love basketball, basketball quiz game">
+    <meta name="description" content="Simple basketball quiz game for anyone to test their knowledge">
+    <link rel="stylesheet" href="assets/css/style.css">
+
     <title>Basketball game quiz</title>
 </head>
 <body>
-    <section>
+    <section class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Basketball game quiz ! :)</h1>
             <a href="game.html" class="btn-index">Play</a>
             <a href="leaderboard.html" class="btn-index">Leaderboard</a>
         </div>
-    </section>
-    
+    </section>  
 </body>
 </html>
