Add correction to leadeboard page, took container-leader-button div out of container-leaderboard div, styled the button

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz game</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <section class="container-leaderboard">
-        <div class="leaderboard">
-            <h1>Results!</h1>
-            <ol id="leaderboard"></ol>
+    <section>
+        <div class="container-leaderboard">
+            <div class="leaderboard">
+                <h1>Results!</h1>
+                <ol id="leaderboard"></ol>
+            </div>
+            <br/>
         </div>
-        <br/>
         <div class="container-leaderboard-button" style="height: 0px">
             <a href="index.html" class="btn"> Go Back</a>
         </div>
