Add h1 question, infoMessage div and styled it, answers to game.html page

--- a/game.html
+++ b/game.html
@@ -30,6 +30,13 @@
             </div>
         </div>
 
+        <h1 id="questions"></h1>
+        <br/>
+        <br/>
+        <br/>
+        <div id="infoMessage" style="text-align:center; font-size: 1rem; display:absolute"></div>
+        <div id="answers"></div>
+
     </section>
     
 </body>
