Add changes to functions adding const and fixed a spelling in game.html page

--- a/game.html
+++ b/game.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <h1 id="questions"></h1>
+        <h1 id="question"></h1>
         <br/>
         <br/>
         <br/>
@@ -38,6 +38,9 @@
         <div id="answers"></div>
 
     </section>
+
+    <script src="assets/js/script.js"></script>
+    <script src="https://kit.fontawesome.com/7edd419eb4.js" crossorigin="anonymous"></script>
     
 </body>
 </html>
