--- a/game.html
+++ b/game.html
@@ -15,18 +15,18 @@
                     <p id="progressText" class="hud-prefix">
                         Question  
                     </p>
-                    <div id="ProgressBar">
+                    <div id="progressBar">
                         <div id="progressBarFull"></div>
                     </div>
                 </div>
-                <div class="hud-tem">
+                <div class="hud-item">
                     <p class="hud-prefix">
                         Score
                     </p>
                     <h1 class="hud-main-text" id="score">
                         0
                     </h1>
-                </div>
+                
             </div>
         </div>
 
