Add h2 message and add an input for user to type their name

--- a/endgame.html
+++ b/endgame.html
@@ -10,7 +10,10 @@
     <section class="container">
         <div id="endgame" class="flex-center flex-column">
             <h1 id="finalScore">0</h1>
-            <form class="endgame-form-container"></form>
+            <form class="endgame-form-container">
+                <h2 id="endgame-text"> CONGRATULATIONS! enter your username to save your score!</h2>
+                <input type="text" name="name" id="username" placeholder="username">
+            </form>
         </div>
     </section>
     
