Add save score button, play again and go back and linked them to game and index pages

--- a/endgame.html
+++ b/endgame.html
@@ -14,6 +14,9 @@
                 <h2 id="endgame-text"> CONGRATULATIONS! enter your username to save your score!</h2>
                 <input type="text" name="name" id="username" placeholder="username">
             </form>
+            <button class="btn" id="saveScoreBtn" type="submit" onclick="SaveHighScore()">Save</button>
+            <a href="game.html" class="btn">Play Again</a>
+            <a href="index.html" class="btn">Go Back</a>
         </div>
     </section>
     
