Add get results functions for users to get their results

--- a/endgame.html
+++ b/endgame.html
@@ -19,6 +19,6 @@
             <a href="index.html" class="btn">Go Back</a>
         </div>
     </section>
-    
+    <script src="assets/js/endgame.js"></script>
 </body>
 </html>
