--- a/endgame.html
+++ b/endgame.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Congratulations !!!</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
                 <h2 id="endgame-text"> CONGRATULATIONS! enter your username to save your score!</h2>
                 <input type="text" name="name" id="username" placeholder="username">
             </form>
-            <button class="btn" id="saveScoreBtn" type="submit" onclick="SaveHighScore()">Save</button>
+            <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore()">Save</button>
             <a href="game.html" class="btn">Play Again</a>
             <a href="index.html" class="btn">Go Back</a>
         </div>
