--- a/endgame.html
+++ b/endgame.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="basketball, love basketball, basketball quiz game">
+    <meta name="description" content="Simple basketball quiz game for anyone to test their knowledge">
     <link rel="stylesheet" href="assets/css/style.css">
+    
     <title>Congratulations !!!</title>
 </head>
 <body>
