--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keyword" content="basketball, love basketball, basketball quiz game">
+    <meta name="description" content="Simple basketball quiz game for anyone to test their knowledge">
     <title>Quiz game</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
